# ponish

./: LICENSE.md  README.md  TODO.md  _config.yml  affix-regex.txt  alphabet.py  braile_art.py  draw.py  draw_jupyturtle.py  editors-notes.md  glyph_kerning_lab.ipynb  glyph_kerning_lab.py  glyph_lab.py  glyphs.py  ipa.py  lesson_1_examples.py  lesson_1_examples_alphabet.py  lesson_2_examples.py  lesson_2_examples_2.py  lesson_2_examples_3.py  lesson_2_examples_4.py  lesson_2_examples_5.py  lesson_2_passage_conan.py  lesson_3_examples_1.py  lesson_3_examples_2.py  lesson_3_examples_3.py  lesson_3_examples_4.py  lesson_4_examples_1.py  lesson_5_examples_1.py  precommit.sh  pyproject.toml  text_lab.py  turtle_alphabet.py
manual/: index.md  part-1-lesson-1.md  part-1-lesson-2.md  part-1-lesson-3.md  part-1-lesson-4.md  part-1.md  part-2.md  ponish-no-images.md  ponish.md
manual/original-images/: affix-phrases-boxes.csv  affixes-boxes.csv  lesson-2-boxes.csv  lesson-3-boxes.csv  lesson-4-boxes.csv  part-2-boxes.csv
tests/: test_draw.py
tests/__snapshots__/: test_draw.ambr
tests/__snapshots__/test_draw/: test_draw_sentence_braille_snapshot[0-Betwen the tims wen the ou0283ns $(DR)ank $(AT)lantis $(AN)d the riz of][chunk_0].ambr  test_draw_sentence_braille_snapshot[0-Betwen the tims wen the ou0283ns $(DR)ank $(AT)lantis $(AN)d the riz of][chunk_1].ambr  test_draw_sentence_braille_snapshot[0-Betwen the tims wen the ou0283ns $(DR)ank $(AT)lantis $(AN)d the riz of][chunk_2].ambr  (+108 more)
texts/desiderata/: desiderata.md
texts/orwell-1984/: orwell-1984.md
