[project]
name = "ponish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.1",
    "jupyturtle>=2024.4.1",
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]

[tool.ruff]

line-length = 100

[tool.ruff.lint]
select = ["I"]
